# rainwater-harvesting-backend

./: README.md  pyproject.toml
app/: config.py  main.py
app/api/v1/: auth.py  project_routes.py  rainfall.py  users.py
app/db/: dbConnect.py
app/models/: project_model.py  userModel.py
app/services/: calculations.py  rainfallService.py  user_services.py
app/utils/: authUtils.py
